2002-02-21   Daiki Ueno  <ueno@unixuser.org>

	* lisp/nnheader.el (mm-string-as-unibyte): Undo the last change.
	* lisp/gnus-srvr.el (gnus-browse-foreign-server): Ditto.

2002-02-21   Daiki Ueno  <ueno@unixuser.org>

	* lisp/nnheader.el (mm-string-as-unibyte): Alias to
	`string-as-unibyte'.

	* lisp/gnus-srvr.el (gnus-browse-foreign-server): Return unibyte
	group names.

2002-02-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/lpath.el: Bind `navi2ch-mona-font'.

2002-02-18  Daiki Ueno  <ueno@unixuser.org>

	* lisp/gnus-art.el (gnus-treat-monafy): New user option.
	(article-monafy): New function.

2002-02-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/nnheader.el (std11-field-value): Fix regexp.

2002-02-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-treat-display-grey-xface): Default to nil
	under NTEmacs 21.

2002-02-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-namazu.el (gnus-namazu-kill-summary-buffers): New
	advice.

2002-02-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/mm-view.el: Require `gnus-mailcap' rather than `mailcap'.

	* lisp/nnheader.el (mm-with-unibyte-buffer): Bind `default-mc-flag'
	instead of `mc-flag'.
	(nnheader-with-unibyte-current-buffer): New macro.
	(mm-with-unibyte-current-buffer): Alias to
	`nnheader-with-unibyte-current-buffer'.
	(nnheader-guess-mime-charset): New macro.
	(mm-guess-mime-charset): Alias to `nnheader-guess-mime-charset'.
	(shell-command-to-string): New function for old Emacsen.

	* lisp/lpath.el: Don't fbind `shell-command-to-string'.

2002-02-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-namazu.el (gnus-namazu/group-alist): Abolished.
	(gnus-namazu/setup): Not set it.
	(gnus-namazu/shutdown): Removed.
	(gnus-namazu/group-prefixed-name): Handle case-insensitive file
	names by itself.

2002-02-09  NISHIDA Masakazu  <m_nisida@ca2.so-net.ne.jp>

	* lisp/gnus-namazu.el (gnus-namazu/complete-query): Relaxed the
	regexp which matches field search keywords.
